--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,4 @@ RewriteRule ^(.*)$ $1.php
 # Return 404 if original request is .php
 RewriteCond %{THE_REQUEST} "^[^ ]* .*?\.php[? ].*$"
 RewriteRule .* - [L,R=404]
+php_flag output_buffering on
